force-app/main/default/objects/AR_User_Story__mdt/AR_User_Story__mdt.object-meta.xml
<CustomObject>
    <description>AR User Story</description>
    <label>AR User Story</label>
    <pluralLabel>AR User Storys</pluralLabel>
</CustomObject>