force-app/main/default/objects/AR_User_Story__mdt/fields/AR_User_Story__c.field-meta.xml
<CustomField>
    <fullName>AR_User_Story__c</fullName>
    <description>AR User Story</description>
    <inlineHelpText>AR User Story</inlineHelpText>
    <label>AR User Story</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>