force-app/main/default/objects/AR_User_Story__mdt/fields/isTrue__c.field-meta.xml
<CustomField>
    <fullName>isTrue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>isTrue</description>
    <inlineHelpText>AR User Story</inlineHelpText>
    <label>isTrue</label>
    <type>Checkbox</type>
</CustomField>