force-app/main/default/objects/AR_User_Story__mdt/fields/Test_num__c.field-meta.xml
<CustomField>
    <fullName>Test_num__c</fullName>
    <label>Test_num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>