force-app/main/default/objects/AR_User_Story__mdt/fields/Today__c.field-meta.xml
<CustomField>
    <fullName>Today__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <label>Today</label>
    <required>true</required>
    <type>Date</type>
</CustomField>