force-app/main/default/objects/AR_User_Story__mdt/validationRules/Not_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Empty</fullName>
    <active>true</active>
    <description>AR User Story</description>
    <errorConditionFormula>ISBLANK(Name__c)</errorConditionFormula>
    <errorMessage>Name Should not be Empty</errorMessage>
</ValidationRule>